--- a/src/Components/BlogItem.css
+++ b/src/Components/BlogItem.css
@@ -1,5 +1,5 @@
 .blogcontets{
-    width: 400px;
+    width: max-content;
     background-color: #0a1035;
     display: flex;
     flex-direction: column;
@@ -30,6 +30,7 @@
     display: flex;
     
     width: max-content;
+    padding-top: 10px;
 
     .subtitle{
         color: white;       ;
