--- a/src/Pages/blog.css
+++ b/src/Pages/blog.css
@@ -30,7 +30,7 @@ form{
     display: flex;
      flex-direction: column;
      gap: 10px;
-     height: 71vh;
+     height: 530px;
      overflow: auto;
  }
  label{
@@ -69,11 +69,12 @@ textarea{
     color: white;
     padding: 5px;
     font-weight: bold;
-    height: 35px;
+    height: 50px;
     border: none;
-    width: 80px;
+    width: 130px;
     cursor: pointer;
     border-radius: 15px;
+    font-size: 25px;
 }
 .checkbox-wrapper {
     display: flex;
@@ -97,7 +98,7 @@ textarea{
     justify-content: center;
     align-items: center;
     margin-top: 10px;
-    width: 70vw;
+    width: 75vw;
 
     
 .blogtitle{
@@ -108,4 +109,19 @@ textarea{
     /* display: flex;
     flex-direction: row; */
 }
+}
+.success-message{
+    background:#d1e7dd;
+    position: fixed;
+    top: 15px;
+    height: 50px;
+    right: 15px;
+    border-radius: 10px;
+    width: 300px;
+    font-size: 20px;
+    color: #7a7092
+    ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
