--- a/src/Pages/login.css
+++ b/src/Pages/login.css
@@ -2,13 +2,13 @@
 
 .formcontainer{
     background: url('../../public/assets/grid.svg');
-    /* background: url('../../../public/assets/grid.svg'); */
+    
     position: relative;
     z-index: 50;
 }
 .content{
     background-color: #070c28;
-    /* width: 100vw; */
+   
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -63,4 +63,34 @@
          border-radius: 10px;
      }
 
+}
+.error{
+    background: rgb(255, 210, 210);
+    position: fixed;
+    top: 15px;
+    height: 50px;
+    right: 15px;
+    border-radius: 10px;
+    width: 300px;
+    font-size: 20px;
+    color: #62467d
+    ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.success{
+    background:#d1e7dd;
+    position: fixed;
+    top: 15px;
+    height: 50px;
+    right: 15px;
+    border-radius: 10px;
+    width: 300px;
+    font-size: 20px;
+    color: #7a7092
+    ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
