--- a/src/Pages/blog.css
+++ b/src/Pages/blog.css
@@ -14,12 +14,21 @@
     align-items: center;
     gap: 10px;
     padding: 20px 60px;
+    .backbtt{
+        font-size: 18px;
+        color:#a4a6b0 ;
+        margin: 0px 0px 0px 25px;
+        cursor: pointer;
+    }
+    .backbtt:hover{
+        color: #fff;
+    }
 
 .blogtitle{
-    color: #a4a6b0        ;
+    color: #a4a6b0  ;      ;
     font-size: 30px;
     width: max-content;
-    margin-left: 40vw;
+    /* margin-left: 40vw; */
 
 }
 .fa-right-from-bracket{
