--- a/src/Pages/blogpost.css
+++ b/src/Pages/blogpost.css
@@ -17,7 +17,8 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 100%;
+        width: 60%;
+        margin-right: 45%;
         /* margin-left: 50%; */
     
 
