--- a/src/Pages/blogpost.css
+++ b/src/Pages/blogpost.css
@@ -1,4 +1,4 @@
-.blog-section{
+.blog-sections{
     display: flex;
     /* justify-content: center; */
     align-items: center; /* Added to vertically center the content */
