--- a/src/Pages/updatePost.css
+++ b/src/Pages/updatePost.css
@@ -74,7 +74,7 @@ textarea{
 }
 .modal-footer{
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     padding-right: 40px;
 
     .btt1{
